.Nuked files, refixed header and source

--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -7,8 +7,12 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Battleground.Battleground
-GameDefaultMap=/Game/Battleground.Battleground
+EditorStartupMap=/Game/levels/MainMenu.MainMenu
+GameDefaultMap=/Game/levels/MainMenu.MainMenu
+GlobalDefaultGameMode=/Game/Blueprints/BattleTankGameMode_BP.BattleTankGameMode_BP_C
+
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=Always
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -48,5 +52,4 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
 
